# autoreject

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  azure-pipelines.yml  circle.yml  codecov.yml  conftest.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: automerge.yml  build.yml  circle-artifacts.yml  python-publish.yml  test.yml
autoreject/: __init__.py  autoreject.py  backends.py  bayesopt.py  conftest.py  gpu_interpolation.py  gpu_pipeline.py  ransac.py  utils.py  viz.py
autoreject/tests/: test_autoreject.py  test_backends.py  test_bayesopt.py  test_gpu_interpolation.py  test_ransac.py  test_utils.py  test_viz.py
doc/: Makefile  api.rst  conf.py  explanation.rst  faq.rst  index.rst  whats_new.rst
doc/_static/: style.css  versions.json
doc/_templates/: layout.html  navbar.html  version-switcher.html
examples/: README.txt  plot_auto_repair.py  plot_autoreject_workflow.py  plot_channel_thresholds.py  plot_clean_hcp.py  plot_estimate_global_reject.py  plot_example_workflow.py  plot_global_reject.py  plot_ransac.py  plot_visualize_bad_epochs.py
